hwk3_symbol/parser/parser.output
Terminals which are not used

   EOF_T
   OTHER_T


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration
    4                | declarationList error
    5                | error declaration

    6 declaration: varDeclaration
    7            | funcDeclaration

    8 varDeclaration: INT_T varDeclList ';'

    9 varDeclList: varDeclList ',' varDecl
   10            | varDecl
   11            | varDeclList ',' error
   12            | error '.' varDecl

   13 varDecl: ID_T

   14 @1: /* empty */

   15 varDecl: ID_T @1 '=' expression
   16        | ID_T '[' INTCONST_T ']'

   17 @2: /* empty */

   18 funcDeclaration: INT_T ID_T @2 '(' formalParams ')' compoundStatement

   19 @3: /* empty */

   20 funcDeclaration: VOID_T ID_T @3 '(' formalParams ')' compoundStatement

   21 formalParams: formalList
   22             | VOID_T
   23             | /* empty */

   24 formalList: formalList ',' formalParam
   25           | formalParam
   26           | formalList ',' error

   27 formalParam: INT_T ID_T
   28            | INT_T ID_T '[' ']'
   29            | INT_T error

   30 compoundStatement: '{' localDeclarations statementList '}'

   31 localDeclarations: localDeclarations varDeclaration
   32                  | /* empty */

   33 statementList: statementList statement
   34              | /* empty */

   35 statement: expressionStatement
   36          | compoundStatement
   37          | ifStatement
   38          | whileStatement
   39          | doWhileStatement
   40          | forStatement
   41          | returnStatement
   42          | readStatement
   43          | printStatement

   44 expressionStatement: expression ';'
   45                    | ';'

   46 ifStatement: IF_T '(' expression ')' statement
   47            | IF_T '(' expression ')' statement ELSE_T statement
   48            | IF_T '(' error ')' statement
   49            | IF_T '(' error ')' statement ELSE_T statement

   50 whileStatement: WHILE_T '(' expression ')' statement
   51               | WHILE_T '(' error ')' error

   52 doWhileStatement: DO_T statement WHILE_T '(' expression ')' ';'
   53                 | DO_T error WHILE_T '(' error ')' ';'

   54 forStatement: FOR_T '(' forHeaderExpression ';' forHeaderExpression ';' forHeaderExpression ')' statement
   55             | FOR_T '(' error ';' error ';' error ')' error
   56             | FOR_T '(' error ')' error

   57 forHeaderExpression: expression
   58                    | /* empty */

   59 returnStatement: RETURN_T ';'
   60                | RETURN_T expression ';'
   61                | RETURN_T error ';'

   62 readStatement: READ_T var ';'
   63              | READ_T error ';'

   64 printStatement: PRINT_T expression ';'
   65               | PRINT_T STRINGCONST_T ';'
   66               | PRINT_T error ';'

   67 expression: var '=' expression
   68           | rValue
   69           | var '=' error

   70 var: ID_T

   71 @4: /* empty */

   72 var: ID_T @4 '[' expression ']'

   73 rValue: expression '+' expression
   74       | expression '-' expression
   75       | expression '*' expression
   76       | expression '/' expression
   77       | expression '%' expression
   78       | expression '<' expression
   79       | expression LESS_EQUAL_T expression
   80       | expression '>' expression
   81       | expression GREATER_EQUAL_T expression
   82       | expression ISEQUAL_T expression
   83       | expression NOTEQUAL_T expression
   84       | expression AND_T expression
   85       | expression OR_T expression
   86       | '!' expression
   87       | '-' expression
   88       | var
   89       | INCREMENT_T var
   90       | DECREMENT_T var
   91       | '(' expression ')'
   92       | call
   93       | INTCONST_T

   94 @5: /* empty */

   95 call: ID_T @5 '(' args ')'

   96 args: argList
   97     | /* empty */

   98 argList: argList ',' expression
   99        | expression
  100        | error ',' error


Terminals, with rules where they appear

$end (0) 0
'!' (33) 86
'%' (37) 77
'(' (40) 18 20 46 47 48 49 50 51 52 53 54 55 56 91 95
')' (41) 18 20 46 47 48 49 50 51 52 53 54 55 56 91 95
'*' (42) 75
'+' (43) 73
',' (44) 9 11 24 26 98 100
'-' (45) 74 87
'.' (46) 12
'/' (47) 76
';' (59) 8 44 45 52 53 54 55 59 60 61 62 63 64 65 66
'<' (60) 78
'=' (61) 15 67 69
'>' (62) 80
'[' (91) 16 28 72
']' (93) 16 28 72
'{' (123) 30
'}' (125) 30
error (256) 4 5 11 12 26 29 48 49 51 53 55 56 61 63 66 69 100
ISEQUAL_T (258) 82
NOTEQUAL_T (259) 83
LESS_EQUAL_T (260) 79
GREATER_EQUAL_T (261) 81
INCREMENT_T (262) 89
DECREMENT_T (263) 90
AND_T (264) 84
OR_T (265) 85
INT_T (266) 8 18 27 28 29
WHILE_T (267) 50 51 52 53
FOR_T (268) 54 55 56
IF_T (269) 46 47 48 49
ELSE_T (270) 47 49
RETURN_T (271) 59 60 61
VOID_T (272) 20 22
READ_T (273) 62 63
PRINT_T (274) 64 65 66
ID_T (275) 13 15 16 18 20 27 28 70 72 95
UMINUS_T (276)
DO_T (277) 52 53
STRINGCONST_T (278) 65
INTCONST_T (279) 16 93
EOF_T (280)
OTHER_T (281)
LOWER_THAN_ELSE (282)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
declarationList (48)
    on left: 2 3 4 5, on right: 1 2 4
declaration (49)
    on left: 6 7, on right: 2 3 5
varDeclaration (50)
    on left: 8, on right: 6 31
varDeclList (51)
    on left: 9 10 11 12, on right: 8 9 11
varDecl (52)
    on left: 13 15 16, on right: 9 10 12
@1 (53)
    on left: 14, on right: 15
funcDeclaration (54)
    on left: 18 20, on right: 7
@2 (55)
    on left: 17, on right: 18
@3 (56)
    on left: 19, on right: 20
formalParams (57)
    on left: 21 22 23, on right: 18 20
formalList (58)
    on left: 24 25 26, on right: 21 24 26
formalParam (59)
    on left: 27 28 29, on right: 24 25
compoundStatement (60)
    on left: 30, on right: 18 20 36
localDeclarations (61)
    on left: 31 32, on right: 30 31
statementList (62)
    on left: 33 34, on right: 30 33
statement (63)
    on left: 35 36 37 38 39 40 41 42 43, on right: 33 46 47 48 49 50
    52 54
expressionStatement (64)
    on left: 44 45, on right: 35
ifStatement (65)
    on left: 46 47 48 49, on right: 37
whileStatement (66)
    on left: 50 51, on right: 38
doWhileStatement (67)
    on left: 52 53, on right: 39
forStatement (68)
    on left: 54 55 56, on right: 40
forHeaderExpression (69)
    on left: 57 58, on right: 54
returnStatement (70)
    on left: 59 60 61, on right: 41
readStatement (71)
    on left: 62 63, on right: 42
printStatement (72)
    on left: 64 65 66, on right: 43
expression (73)
    on left: 67 68 69, on right: 15 44 46 47 50 52 57 60 64 67 72 73
    74 75 76 77 78 79 80 81 82 83 84 85 86 87 91 98 99
var (74)
    on left: 70 72, on right: 62 67 69 88 89 90
@4 (75)
    on left: 71, on right: 72
rValue (76)
    on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
    91 92 93, on right: 68
call (77)
    on left: 95, on right: 92
@5 (78)
    on left: 94, on right: 95
args (79)
    on left: 96 97, on right: 95
argList (80)
    on left: 98 99 100, on right: 96 98


state 0

    0 $accept: . program $end

    error   shift, and go to state 1
    INT_T   shift, and go to state 2
    VOID_T  shift, and go to state 3

    program          go to state 4
    declarationList  go to state 5
    declaration      go to state 6
    varDeclaration   go to state 7
    funcDeclaration  go to state 8


state 1

    5 declarationList: error . declaration

    INT_T   shift, and go to state 2
    VOID_T  shift, and go to state 3

    declaration      go to state 9
    varDeclaration   go to state 7
    funcDeclaration  go to state 8


state 2

    8 varDeclaration: INT_T . varDeclList ';'
   18 funcDeclaration: INT_T . ID_T @2 '(' formalParams ')' compoundStatement

    error  shift, and go to state 10
    ID_T   shift, and go to state 11

    varDeclList  go to state 12
    varDecl      go to state 13


state 3

   20 funcDeclaration: VOID_T . ID_T @3 '(' formalParams ')' compoundStatement

    ID_T  shift, and go to state 14


state 4

    0 $accept: program . $end

    $end  shift, and go to state 15


state 5

    1 program: declarationList .
    2 declarationList: declarationList . declaration
    4                | declarationList . error

    error   shift, and go to state 16
    INT_T   shift, and go to state 2
    VOID_T  shift, and go to state 3

    $end  reduce using rule 1 (program)

    declaration      go to state 17
    varDeclaration   go to state 7
    funcDeclaration  go to state 8


state 6

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


state 7

    6 declaration: varDeclaration .

    $default  reduce using rule 6 (declaration)


state 8

    7 declaration: funcDeclaration .

    $default  reduce using rule 7 (declaration)


state 9

    5 declarationList: error declaration .

    $default  reduce using rule 5 (declarationList)


state 10

   12 varDeclList: error . '.' varDecl

    '.'  shift, and go to state 18


state 11

   13 varDecl: ID_T .
   15        | ID_T . @1 '=' expression
   16        | ID_T . '[' INTCONST_T ']'
   18 funcDeclaration: INT_T ID_T . @2 '(' formalParams ')' compoundStatement

    '['  shift, and go to state 19

    '='       reduce using rule 14 (@1)
    '('       reduce using rule 17 (@2)
    $default  reduce using rule 13 (varDecl)

    @1  go to state 20
    @2  go to state 21


state 12

    8 varDeclaration: INT_T varDeclList . ';'
    9 varDeclList: varDeclList . ',' varDecl
   11            | varDeclList . ',' error

    ';'  shift, and go to state 22
    ','  shift, and go to state 23


state 13

   10 varDeclList: varDecl .

    $default  reduce using rule 10 (varDeclList)


state 14

   20 funcDeclaration: VOID_T ID_T . @3 '(' formalParams ')' compoundStatement

    $default  reduce using rule 19 (@3)

    @3  go to state 24


state 15

    0 $accept: program $end .

    $default  accept


state 16

    4 declarationList: declarationList error .

    $default  reduce using rule 4 (declarationList)


state 17

    2 declarationList: declarationList declaration .

    $default  reduce using rule 2 (declarationList)


state 18

   12 varDeclList: error '.' . varDecl

    ID_T  shift, and go to state 25

    varDecl  go to state 26


state 19

   16 varDecl: ID_T '[' . INTCONST_T ']'

    INTCONST_T  shift, and go to state 27


state 20

   15 varDecl: ID_T @1 . '=' expression

    '='  shift, and go to state 28


state 21

   18 funcDeclaration: INT_T ID_T @2 . '(' formalParams ')' compoundStatement

    '('  shift, and go to state 29


state 22

    8 varDeclaration: INT_T varDeclList ';' .

    $default  reduce using rule 8 (varDeclaration)


state 23

    9 varDeclList: varDeclList ',' . varDecl
   11            | varDeclList ',' . error

    error  shift, and go to state 30
    ID_T   shift, and go to state 25

    varDecl  go to state 31


state 24

   20 funcDeclaration: VOID_T ID_T @3 . '(' formalParams ')' compoundStatement

    '('  shift, and go to state 32


state 25

   13 varDecl: ID_T .
   15        | ID_T . @1 '=' expression
   16        | ID_T . '[' INTCONST_T ']'

    '['  shift, and go to state 19

    '='       reduce using rule 14 (@1)
    $default  reduce using rule 13 (varDecl)

    @1  go to state 20


state 26

   12 varDeclList: error '.' varDecl .

    $default  reduce using rule 12 (varDeclList)


state 27

   16 varDecl: ID_T '[' INTCONST_T . ']'

    ']'  shift, and go to state 33


state 28

   15 varDecl: ID_T @1 '=' . expression

    INCREMENT_T  shift, and go to state 34
    DECREMENT_T  shift, and go to state 35
    ID_T         shift, and go to state 36
    INTCONST_T   shift, and go to state 37
    '-'          shift, and go to state 38
    '!'          shift, and go to state 39
    '('          shift, and go to state 40

    expression  go to state 41
    var         go to state 42
    rValue      go to state 43
    call        go to state 44


state 29

   18 funcDeclaration: INT_T ID_T @2 '(' . formalParams ')' compoundStatement

    INT_T   shift, and go to state 45
    VOID_T  shift, and go to state 46

    $default  reduce using rule 23 (formalParams)

    formalParams  go to state 47
    formalList    go to state 48
    formalParam   go to state 49


state 30

   11 varDeclList: varDeclList ',' error .

    $default  reduce using rule 11 (varDeclList)


state 31

    9 varDeclList: varDeclList ',' varDecl .

    $default  reduce using rule 9 (varDeclList)


state 32

   20 funcDeclaration: VOID_T ID_T @3 '(' . formalParams ')' compoundStatement

    INT_T   shift, and go to state 45
    VOID_T  shift, and go to state 46

    $default  reduce using rule 23 (formalParams)

    formalParams  go to state 50
    formalList    go to state 48
    formalParam   go to state 49


state 33

   16 varDecl: ID_T '[' INTCONST_T ']' .

    $default  reduce using rule 16 (varDecl)


state 34

   89 rValue: INCREMENT_T . var

    ID_T  shift, and go to state 51

    var  go to state 52


state 35

   90 rValue: DECREMENT_T . var

    ID_T  shift, and go to state 51

    var  go to state 53


state 36

   70 var: ID_T .
   72    | ID_T . @4 '[' expression ']'
   95 call: ID_T . @5 '(' args ')'

    '['       reduce using rule 71 (@4)
    '('       reduce using rule 94 (@5)
    $default  reduce using rule 70 (var)

    @4  go to state 54
    @5  go to state 55


state 37

   93 rValue: INTCONST_T .

    $default  reduce using rule 93 (rValue)


state 38

   87 rValue: '-' . expression

    INCREMENT_T  shift, and go to state 34
    DECREMENT_T  shift, and go to state 35
    ID_T         shift, and go to state 36
    INTCONST_T   shift, and go to state 37
    '-'          shift, and go to state 38
    '!'          shift, and go to state 39
    '('          shift, and go to state 40

    expression  go to state 56
    var         go to state 42
    rValue      go to state 43
    call        go to state 44


state 39

   86 rValue: '!' . expression

    INCREMENT_T  shift, and go to state 34
    DECREMENT_T  shift, and go to state 35
    ID_T         shift, and go to state 36
    INTCONST_T   shift, and go to state 37
    '-'          shift, and go to state 38
    '!'          shift, and go to state 39
    '('          shift, and go to state 40

    expression  go to state 57
    var         go to state 42
    rValue      go to state 43
    call        go to state 44


state 40

   91 rValue: '(' . expression ')'

    INCREMENT_T  shift, and go to state 34
    DECREMENT_T  shift, and go to state 35
    ID_T         shift, and go to state 36
    INTCONST_T   shift, and go to state 37
    '-'          shift, and go to state 38
    '!'          shift, and go to state 39
    '('          shift, and go to state 40

    expression  go to state 58
    var         go to state 42
    rValue      go to state 43
    call        go to state 44


state 41

   15 varDecl: ID_T @1 '=' expression .
   73 rValue: expression . '+' expression
   74       | expression . '-' expression
   75       | expression . '*' expression
   76       | expression . '/' expression
   77       | expression . '%' expression
   78       | expression . '<' expression
   79       | expression . LESS_EQUAL_T expression
   80       | expression . '>' expression
   81       | expression . GREATER_EQUAL_T expression
   82       | expression . ISEQUAL_T expression
   83       | expression . NOTEQUAL_T expression
   84       | expression . AND_T expression
   85       | expression . OR_T expression

    ISEQUAL_T        shift, and go to state 59
    NOTEQUAL_T       shift, and go to state 60
    LESS_EQUAL_T     shift, and go to state 61
    GREATER_EQUAL_T  shift, and go to state 62
    AND_T            shift, and go to state 63
    OR_T             shift, and go to state 64
    '<'              shift, and go to state 65
    '>'              shift, and go to state 66
    '+'              shift, and go to state 67
    '-'              shift, and go to state 68
    '*'              shift, and go to state 69
    '/'              shift, and go to state 70
    '%'              shift, and go to state 71

    $default  reduce using rule 15 (varDecl)


state 42

   67 expression: var . '=' expression
   69           | var . '=' error
   88 rValue: var .

    '='  shift, and go to state 72

    $default  reduce using rule 88 (rValue)


state 43

   68 expression: rValue .

    $default  reduce using rule 68 (expression)


state 44

   92 rValue: call .

    $default  reduce using rule 92 (rValue)


state 45

   27 formalParam: INT_T . ID_T
   28            | INT_T . ID_T '[' ']'
   29            | INT_T . error

    error  shift, and go to state 73
    ID_T   shift, and go to state 74


state 46

   22 formalParams: VOID_T .

    $default  reduce using rule 22 (formalParams)


state 47

   18 funcDeclaration: INT_T ID_T @2 '(' formalParams . ')' compoundStatement

    ')'  shift, and go to state 75


state 48
